Fixed issues on iOS

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,10 @@
   @include font-smoothing(on);
 }
 
+#app {
+  position: relative;
+}
+
 body {
   margin: 0;
   background: $tertiary;
